--- a/03 - CSS Variables/index.html
+++ b/03 - CSS Variables/index.html
@@ -22,19 +22,19 @@
 
   <style>
     :root {
-      --base: #ffc600;
+      --baseColor: #ffc600;
       --spacing: 10px;
       --blur: 10px;
     }
 
     img {
       padding: var(--spacing);
-      background: var(--base);
-      filter: blur(var(--blur));
+      background: var(--baseColor);
+      filter: blur(var(--blur))
     }
 
     .hl {
-      color: var(--base);
+      color: var(--baseColor);
     }
 
     /*
@@ -60,17 +60,18 @@
   </style>
 
   <script>
-    const inputs = document.querySelectorAll('.controls input');
+    const inputs = document.querySelectorAll(".controls input");
 
     function handleUpdate() {
       const suffix = this.dataset.sizing || '';
       document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+
     }
 
-    inputs.forEach(input => input.addEventListener('change', handleUpdate));
-    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
-  </script>
+    inputs.forEach(input => input.addEventListener("change", handleUpdate));
+    inputs.forEach(input => input.addEventListener("mousemove", handleUpdate))
 
+  </script>
 
 </body>
 </html>
